<resources>
    <string name="app_name">Food Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome %s</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Add Experience</string>
    <string name="menu_gallery">My Experiences</string>
    <string name="menu_slideshow">Explore</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_dark_mode">Dark mode</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="label_email_password">Email/Password Authentication</string>
    <string name="desc_email_password">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="g_sign_in">Sign in with Google</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="login_below">please login below</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="email_password_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="email_password_title_text">Login to your diary</string>
    <string name="access_control">Access Control</string>
    <string name="enter_the_name_of_the_dish">What did you eat</string>
    <string name="dish_image_preview">Dish image preview</string>
    <string name="how_was_your_experience">How was your experience</string>
    <string name="upload_image">Upload Image</string>
    <string name="save">Save</string>

    <string-array name="cuisines">
        <item>Select cuisine</item>
        <item>African</item>
        <item>American</item>
        <item>Asian</item>
        <item>Brazilian</item>
        <item>British</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Lebanese</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Middle Eastern</item>
        <item>Moroccan</item>
        <item>Pakistani</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Scandinavian</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Vietnamese</item>
    </string-array>

    <string name="experiencesNotFound">No Experiences Yet…\nGo add a Experience!</string>
    <string name="messageLoading">Please Wait while the Experiences are Loading</string>
    <string name="image">Image</string>
    <string name="restaurant">Restaurant</string>
    <string name="dish">Dish</string>
    <string name="close_experience_popup">Close experience popup</string>
    <string name="rating">Rating</string>
    <string name="self_experiences">Self experiences</string>
    <string name="other_s_experiences">Other\'s experiences</string>

</resources>
