<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/legend_red_marker"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/menu_theme">
        <menu>
            <item
                android:id="@+id/nav_dark_mode"
                android:checkable="true"
                android:icon="@android:drawable/star_off"
                android:title="@string/menu_dark_mode"
                app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                app:showAsAction="always" />
        </menu>
    </item>

    <item android:title="@string/access_control">
        <menu>
            <item
                android:id="@+id/sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>