<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ie.setu.fooddiary.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="experience"
            app:argType="ie.setu.fooddiary.models.ExperienceModel"
            app:nullable="true"
            android:defaultValue="@null"/>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ie.setu.fooddiary.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_galleryFragment_to_homeFragment"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ie.setu.fooddiary.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>